--- a/week-3/23-comments/index.html
+++ b/week-3/23-comments/index.html
@@ -32,6 +32,12 @@
           <p>Add your comments and let us know what you think!</p>
 
           <!-- Your comment form goes here -->
+          <form method="get">
+            Add Your Message
+            <textarea name="comment" id="" cols="30" rows="10"></textarea>
+            <label for="comment"> </label>
+            <button>Send Comment</button>
+          </form>
         </div>
       </main>
     </div>
