Completed 25-shirt-size exercise

--- a/week-3/25-shirt-size/index.html
+++ b/week-3/25-shirt-size/index.html
@@ -28,8 +28,18 @@
                   <p>Codi t-shirt, black</p>
                 </div>
               </td>
+
               <td>
-                Medium
+                <form>
+                  <select>
+                    <label for="small"></label>
+                    <option value="small" id="small">Small</option>
+                    <label for="medium"></label>
+                    <option value="medium">Medium</option>
+                    <label for="large"></label>
+                    <option value="large" id="large">Large</option>
+                  </select>
+                </form>
               </td>
               <td>
                 1
