Completed 26-checkout-groups exercise

--- a/week-3/26-checkout-groups/index.html
+++ b/week-3/26-checkout-groups/index.html
@@ -38,8 +38,30 @@
           <h2 class="checkout__title">Checkout</h2>
           <form method="GET" id="checkout-form" class="checkout__form">
             <!-- Add the form fields here -->
-
-            <button type="submit">Complete Purchase</button>
+            <fieldset>
+              <legend>Billing Address</legend>
+              <label for="Address-line-1">Address Line 1</label>
+              <input type="text" name="Address-line-1" id="Address-line-1" />
+              <label for="Address-line-2">Address Line 2</label>
+              <input type="text" id="Address-line-2" name="Address-line-2" />
+              <label for="Postal-code">Postal Code</label>
+              <input type="text" id="Postal-code" name="Postal-code" />
+              <label for="city">City</label>
+              <input type="text" name="city" id="city" />
+            </fieldset>
+            <fieldset>
+              <legend>
+                Delivery Address
+              </legend>
+              <label for="Address-line-11">Address Line 1</label>
+              <input type="text" name="Address-line-11" id="Address-line-11" />
+              <label for="Address-line-22">Address Line 2</label>
+              <input type="text" name="Address-line-22" id="Address-line-22" />
+              <label for="Postal-codee">Postal Code</label>
+              <input type="text" id="Postal-codee" name="Postal-codee" />
+              <label for="city">City</label>
+              <input type="text" name="city" id="city" />
+            </fieldset>
           </form>
         </div>
       </main>
